--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "/"
+baseURL: "https://casat.github.io"
 title: "CASATdocs"
 theme: "geekdoc"
 
@@ -54,7 +54,7 @@ params:
 
   # (Optional, default none) Set source repository location. Used for 'Edit this page' links.
   # You can also specify this parameter per page in front matter.
-#  geekdocRepo: "https://github.com/thegeeklab/hugo-geekdoc"
+  geekdocRepo: "https://github.com/casat/casat.github.io"
 
   # (Optional, default none) Enable "Edit this page" links. Requires 'GeekdocRepo' param
   # and path must point to 'content' directory of repo.
