--- a/config.yaml
+++ b/config.yaml
@@ -59,7 +59,7 @@ params:
   # (Optional, default none) Enable "Edit this page" links. Requires 'GeekdocRepo' param
   # and path must point to 'content' directory of repo.
   # You can also specify this parameter per page in front matter.
-  geekdocEditPath: tree/source/content
+  geekdocEditPath: edit/source/content/
 
   # (Optional, default true) Enables search function with flexsearch.
   # Index is built on the fly and might slowdown your website.
