removed custom shortcode

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: "https://wiki.casat.org"
-title: "{{< rawhtml >}}<strong>CASAT</strong>docs{{< /rawhtml >}}"
+title: "<strong>CASAT</strong>docs"
 theme: "hugo-geekdoc"
 
 pluralizeListTitles: false
