--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 baseURL: "https://wiki.casat.org"
-title: <strong>CASAT</strong>docs
+title: "CASATdocs"
 theme: "hugo-geekdoc"
 
 pluralizeListTitles: false
